# mcp-smartlab

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
src/mcp_smartlab/: __init__.py  cache.py  parser.py  server.py
tests/: conftest.py  test_cache.py  test_parser.py  test_server.py
tests/fixtures/: bond_detail.html  bonds_chart_data.html  bonds_corporate.html  bonds_empty.html  bonds_ofz.html  dividends.html  pagination.html  shares.html  shares_fundamental.html
