[project]
name = "mcp-smartlab"
version = "0.1.0"
description = "MCP server for scraping financial data from smart-lab.ru (bonds, shares, dividends)"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "freezegun>=1.4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_smartlab"]

[project.scripts]
mcp-smartlab = "mcp_smartlab.server:main"
